<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">
    <FrameLayout
            android:id="@+id/slidebar_homeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <FrameLayout
            android:id="@+id/slidebar_profileFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <RelativeLayout
            android:id="@+id/left_drawer"
            android:layout_width="@dimen/phone_slidebar_width"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:dividerHeight="@dimen/phone_divider_height"
            android:background="@color/White">

        <RelativeLayout
                android:id="@+id/slidebar_rlTopBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/slidebar_ivTopBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_background"
                    android:background="@drawable/nav_bar"
                    android:layout_alignParentTop="true"/>
            <EditText
                    android:id="@+id/slidebar_etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/phone_padding"
                    android:hint="@string/hint_search"
                    android:drawableLeft="@drawable/slidebar_search_icon"
                    android:background="@drawable/edittext_custom"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/phone_margin"
                    android:layout_marginRight="@dimen/phone_margin"/>

        </RelativeLayout>
        <ImageView
                android:id="@+id/slidebar_ivAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/slidebar_avatar_icon"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/slidebar_rlTopBar"
                android:layout_margin="@dimen/phone_margin"/>
        <RelativeLayout
                android:id="@+id/slidebar_rlProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/slidebar_rlTopBar"
                android:layout_toRightOf="@+id/slidebar_ivAvatar"
                android:layout_alignTop="@+id/slidebar_ivAvatar">

            <TextView
                    android:id="@+id/slidebar_tvSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_song"
                    android:textSize="@dimen/slidebar_title_text_size"
                    android:textColor="@color/Black"
                    android:textStyle="bold"
                    />
            <TextView
                    android:id="@+id/slidebar_tvSongArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_singer"
                    android:textSize="@dimen/slidebar_userName_text_size"
                    android:layout_below="@id/slidebar_tvSong"
                    android:textColor="@color/Black"
                    android:textStyle="bold"/>
            <ImageView
                    android:id="@+id/slide_ivNextEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/phone_margin"
                    android:background="@drawable/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            <ImageView
                    android:id="@+id/sidebar_ivProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sidebar_image_setting"
                    android:layout_toLeftOf="@id/slide_ivNextEditProfile"
                    android:layout_centerVertical="true"/>

        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/slidebar_rlContaintListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/slidebar_rlProfile">
            <TextView
                    android:id="@+id/slidebar_tvBarMiddle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Black"/>
            <ListView
                    android:id="@+id/slidebar_listOption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/slidebar_tvBarMiddle"
                    android:choiceMode="singleChoice"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
